--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
 		<div class = 'column' id = '6'></div>
 	</div>
 
-	<div class = 'hidden' id = 'message'>
+	<div class = 'hidden message' id = 'player_win'>
 		Player <span id = 'winner'></span> wins!
+	</div>
+
+	<div class = 'hidden message' id = 'tie'>
+		Tie game!
+	</div>
+
+	<div class = 'hidden message' id = 'button'>
+		Play again?
 	</div>
 
 </body>
